@@ -10,12 +10,17 @@
             "rct2.scenery_small.twh1",
             "rct2.scenery_small.twh2",
             "rct2.scenery_small.tst1",
+            "fidwell.scenery_small.tst1",
             "rct2.scenery_small.tst2",
+            "fidwell.scenery_small.tst2",
             "rct2.scenery_small.tms1",
-            "$DAT:0C58B401|FDTMS1  ",
+            "fidwell.scenery_small.tms1",
             "rct2.scenery_small.tst3",
+            "fidwell.scenery_small.tst3",
             "rct2.scenery_small.tst4",
+            "fidwell.scenery_small.tst4",
             "rct2.scenery_small.tst5",
+            "fidwell.scenery_small.tst5",
             "rct2.scenery_small.tas1",
             "$DAT:0A188D01|ELLTAS1C",
             "rct2.scenery_small.tas2",
