@@ -1,0 +1,45 @@
+{
+    "id": "fidwell.scenery_small.tst4",
+    "authors": ["Chris Sawyer", "Simon Foster"],
+    "version": "1.0",
+    "sourceGame": "custom",
+    "objectType": "scenery_small",
+    "properties": {
+        "price": 5,
+        "removalPrice": -4,
+        "cursor": "CURSOR_TREE_DOWN",
+        "height": 16,
+        "shape": "1/4",
+        "isStackable": true,
+        "hasPrimaryColour": true,
+        "hasSecondaryColour": true
+    },
+    "images": [
+      { "path": "images/0.png", "x": -12, "y": -18 },
+      { "path": "images/1.png", "x": -13, "y": -18 },
+      { "path": "images/2.png", "x": -12, "y": -18 },
+      { "path": "images/3.png", "x": -12, "y": -18 }
+    ],
+    "strings": {
+        "name": {
+            "en-GB": "Toadstool",
+            "fr-FR": "Champignon vénéneux",
+            "de-DE": "Giftpilz",
+            "es-ES": "Seta",
+            "it-IT": "Fungo velenoso",
+            "nl-NL": "Paddenstoel",
+            "sv-SE": "Giftsvamp",
+            "ko-KR": "독버섯",
+            "zh-CN": "伞菌",
+            "zh-TW": "傘菌",
+            "pt-BR": "Cogumelo Venenoso",
+            "cs-CZ": "Muchomůrka",
+            "ja-JP": "毒キノコ",
+            "pl-PL": "Muchomor",
+            "ru-RU": "Мухомор",
+            "eo-ZZ": "Fungo",
+            "ca-ES": "Bolet verinós",
+            "fi-FI": "Sieni"
+        }
+    }
+}
