@@ -17,6 +17,11 @@
 - New object: Dinosaur (rct2.scenery_large.sdn1)
 - New object: Dinosaur (rct2.scenery_large.sdn2)
 - New object: Dinosaur (rct2.scenery_large.sdn3)
+- New object: Toadstool (rct2.scenery_small.tst1)
+- New object: Toadstool (rct2.scenery_small.tst2)
+- New object: Toadstool (rct2.scenery_small.tst3)
+- New object: Toadstool (rct2.scenery_small.tst4)
+- New object: Toadstool (rct2.scenery_small.tst5)
 - New object: Roof (toontowner.scenery_small.ttrfwd01)
 - New object: Roof (toontowner.scenery_small.ttrfwd02)
 - New object: Roof (toontowner.scenery_small.ttrfwd03)
@@ -126,6 +131,7 @@
 - Updated object: Grave Stone (rct2.scenery_small.tgs4)
 - Updated object: Skull (rct2.scenery_small.smskull)
 - Updated object: Rock Wall (rct2.scenery_wall.wallrk32)
+- Updated object: Toadstool (rct2.scenery_small.tms1)
 - Updated object: Roman Palace Corner Piece (rct2tt.scenery_large.romnc2x2)
 - Updated object: Roman Palace End Piece (rct2tt.scenery_large.romne2x1)
 - Updated object: Roman Palace Straight Piece (rct2tt.scenery_large.romns2x2)
